# lurk

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  flake.nix  poseidon2_rust_params.sage  rust-toolchain.toml
.config/: nextest.toml
.github/: BENCH_REGRESSION.md
.github/workflows/: ci.yml  rust-version.yml
benches/: fib.rs  lcs.rs  lurk.rs  sum.rs
demo/: bank.lurk  chained-functional-commitment.lurk  functional-commitment.lurk  init-bank.lurk  mastermind.lurk  microbank.lurk  mini-mastermind.lurk  protocol.lurk  theorems.lurk  voting-system.lurk
examples/: fibonacci.rs
examples/byte_lookup/: Cargo.toml
examples/byte_lookup/src/: debug_builder.rs  main.rs  memoset.rs  symbolic_builder.rs
examples/calculator/: Cargo.toml  README.md
examples/calculator/src/: calculator.rs  dummy_hasher.rs  main.rs  pointers.rs  store.rs
examples/ski/program/: Cargo.toml
examples/ski/program/elf/: riscv32im-succinct-zkvm-elf
examples/ski/program/src/: main.rs
examples/ski/script/: Cargo.toml  proof-with-io.json
examples/ski/script/src/: main.rs
examples/ski/ski/: Cargo.toml
examples/ski/ski/src/: interned.rs  lib.rs  multiset.rs  terms.rs
examples/ski/ski/src/air/: builder.rs  mod.rs  pointer.rs
examples/ski/ski/src/chips/: mod.rs
examples/ski/ski/src/cons/: air.rs  columns.rs  mod.rs
examples/ski/ski/src/cpu/: mod.rs
lib/: lib.lurk  macro-test.lurk  macro.lurk  macros-test.lurk  macros.lurk  struct-test.lurk  struct.lurk  tests.lurk  util-test.lurk  util.lurk
loam-macros/: Cargo.toml
loam-macros/src/: lib.rs  loam_syntax.rs
proptest-regressions/gadgets/comm/: cmp.txt
proptest-regressions/gadgets/unsigned/: cmp.txt  div_rem.txt  field.txt
scripts/: poseidon2_rust_params.sage
src/: air.rs  lib.rs  main.rs  pointers.rs
src/air/: builder.rs  debug.rs  filtered.rs  mod.rs  symbolic.rs
src/air/symbolic/: builder.rs  expression.rs  lookup.rs  variable.rs  virtual_col.rs
src/core/: big_num.rs  chipset.rs  compile.rs  error.rs  eval_compiled.rs  eval_direct.rs  ingress.rs  misc.rs  mod.rs  package.rs  poseidon.rs  stark_machine.rs  state.rs  syntax.rs  tag.rs  u64.rs  zstore.rs
src/core/cli/: comm_data.rs  config.rs  debug.rs  lurk_data.rs  meta.rs  microchain.rs  mod.rs  paths.rs  proofs.rs  rdg.rs  repl.rs  scope.rs  zdag.rs
src/core/cli/tests/: loaded.lurk  mod.rs  prove.lurk  second.lurk
src/core/parser/: base.rs  error.rs  mod.rs  position.rs  syntax.rs
src/core/tests/: eval_compiled.rs  eval_direct.rs  eval_ocaml.rs  lang_direct.rs  mod.rs
src/core/tests/ocaml/: fib.ml
src/gadgets/: api.rs  debug.rs  mod.rs
src/gadgets/big_num/: cmp.rs  mod.rs
src/gadgets/bytes/: builder.rs  mod.rs  record.rs  relation.rs  trace.rs
src/gadgets/comm/: cmp.rs
src/gadgets/unsigned/: add.rs  cmp.rs  div_rem.rs  field.rs  is_zero.rs  less_than.rs  mod.rs  mul.rs
src/lair/: air.rs  bytecode.rs  chip.rs  chipset.rs  execute.rs  expr.rs  func_chip.rs  hasher.rs  lair_chip.rs  macros.rs  map.rs  memory.rs  memoset.rs  mod.rs  pointer.rs  provenance.rs  relations.rs  toplevel.rs  trace.rs
src/lem/: air.rs  bytecode.rs  execute.rs  expr.rs  macros.rs  map.rs  mod.rs  toplevel.rs  trace.rs
src/light_data/: mod.rs
src/loam/: algebra.rs  allocation.rs  distilled_evaluation.rs  evaluation.md  evaluation.rs  heading.rs  memory.rs  mod.rs  quoted.rs  relation.rs  schema.rs  tuple.rs
src/logup/: air.rs  builder.rs  mod.rs  trace.rs
src/lookup/: air.rs  builder.rs  mod.rs  trace.rs
src/lurk/: big_num.rs  chipset.rs  comm.rs  compile.rs  error.rs  eval.rs  eval_compiled.rs  eval_direct.rs  eval_tests.rs  ingress.rs  lang.rs  memory.rs  misc.rs  mod.rs  package.rs  poseidon.rs  reader.rs  stark_machine.rs  state.rs  store.rs  symbol.rs  syntax.rs  tag.rs  u64.rs  uint.rs  zstore.rs
src/lurk/cli/: comm_data.rs  config.rs  io_proof.rs  lurk_data.rs  meta.rs  microchain.rs  mod.rs  paths.rs  proofs.rs  repl.rs  zdag.rs
src/lurk/cli/tests/: first.lurk  loaded-nested.lurk  mod.rs  prove.lurk  second.lurk  verify.lurk
src/lurk/gadgets/: extract_sign.rs  mod.rs  u64.rs
src/lurk/integers/: i63.rs  i64.rs  mod.rs  u64.rs
src/lurk/parser/: base.rs  error.rs  position.rs  string.rs  syntax.rs
src/lurk/tests/: eval.rs  eval_compiled.rs  eval_direct.rs  eval_ocaml.rs  lang.rs  lang_compiled.rs  lang_direct.rs  mod.rs
src/ocaml/: compile.rs  mod.rs  syntax.rs
src/ocaml/parser/: syntax.rs
src/ocaml/parser/tests/: mastermind.ir  mastermind.ml
src/poseidon/: air.rs  columns.rs  config.rs  constants.rs  eval.rs  mod.rs  trace.rs  util.rs
src/poseidon/wide/: air.rs  columns.rs  mod.rs  trace.rs
src/stark/: air.rs  config.rs  folder.rs  logup.rs  mod.rs  proof.rs  prover.rs
src/stark/folder/: prover.rs
src/store_core/: mod.rs
tests/: fib.rs  lurk.rs
