[package]
name = "loam"
version = "0.1.0"
edition.workspace = true

[workspace.package]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
rayon = "1.10.0"
itertools = "0.13.0"
p3-air = { git = "https://github.com/lurk-lab/Plonky3.git", branch = "dev" }
p3-baby-bear = { git = "https://github.com/lurk-lab/Plonky3.git", branch = "dev" }
p3-field = { git = "https://github.com/lurk-lab/Plonky3.git", branch = "dev" }
p3-matrix = { git = "https://github.com/lurk-lab/Plonky3.git", branch = "dev" }
p3-mds = { git = "https://github.com/lurk-lab/Plonky3.git", branch = "dev" }
p3-commit = { git = "https://github.com/lurk-lab/Plonky3.git", branch = "dev" }
p3-challenger = { git = "https://github.com/lurk-lab/Plonky3.git", branch = "dev" }
p3-maybe-rayon = { git = "https://github.com/lurk-lab/Plonky3.git", branch = "dev" }
p3-poseidon2 = { git = "https://github.com/lurk-lab/Plonky3.git", branch = "dev" }
p3-symmetric = { git = "https://github.com/lurk-lab/Plonky3.git", branch = "dev" }
p3-uni-stark = { git = "https://github.com/lurk-lab/Plonky3.git", branch = "dev" }
p3-util = { git = "https://github.com/lurk-lab/Plonky3.git", branch = "dev" }
anyhow = "1.0.72"
arc-swap = "1.7.1"
base-x = "0.2.11"
criterion = "0.5"
elsa = { git = "https://github.com/lurk-lab/elsa", branch = "sync_frozen" }
expect-test = "1.4.1"
fxhash = "0.2.1"
indexmap = "2.2.6"
match_opt = "0.1.2"
nom = "7.1.3"
nom_locate = "4.1.0"
num-bigint = "0.4.3"
once_cell = "1.18.0"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
rustyline = "14.0"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0.44"

[dependencies]
anyhow = { workspace = true }
arc-swap = { workspace = true }
base-x = { workspace = true }
elsa = { workspace = true, features = ["indexmap"] }
expect-test = { workspace = true }
fxhash = { workspace = true }
indexmap = { workspace = true, features = ["rayon"] }
match_opt = { workspace = true }
nom = { workspace = true }
nom_locate = { workspace = true }
num-bigint = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
rand_xoshiro = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
itertools = { workspace = true }
p3-air = { workspace = true }
p3-baby-bear = { workspace = true }
p3-field = { workspace = true }
p3-matrix = { workspace = true }
p3-mds = { workspace = true }
p3-commit = { workspace = true }
p3-challenger = { workspace = true }
p3-maybe-rayon = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }
p3-util = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "fib"
harness = false

[workspace]
members = ["examples/calculator", "examples/byte_lookup"]

[profile.dev-ci]
inherits = "dev"
# By compiling dependencies with optimizations, performing tests gets much faster.
opt-level = 3
overflow-checks = true
lto = "thin"
incremental = false
codegen-units = 16

