[package]
name = "loam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
rayon = "1.10.0"
itertools = "0.13.0"
p3-air = { git = "https://github.com/plonky3/Plonky3.git", branch = "main" }
p3-baby-bear = { git = "https://github.com/plonky3/Plonky3.git", branch = "main" }
p3-field = { git = "https://github.com/plonky3/Plonky3.git", branch = "main" }
p3-matrix = { git = "https://github.com/plonky3/Plonky3.git", branch = "main" }
p3-mds = { git = "https://github.com/plonky3/Plonky3.git", branch = "main" }
p3-commit = { git = "https://github.com/plonky3/Plonky3.git", branch = "main" }
p3-challenger = { git = "https://github.com/plonky3/Plonky3.git", branch = "main" }
p3-maybe-rayon = { git = "https://github.com/plonky3/Plonky3.git", branch = "main" }
p3-poseidon2 = { git = "https://github.com/plonky3/Plonky3.git", branch = "main" }
p3-symmetric = { git = "https://github.com/plonky3/Plonky3.git", branch = "main" }
p3-uni-stark = { git = "https://github.com/plonky3/Plonky3.git", branch = "main" }
p3-util = { git = "https://github.com/plonky3/Plonky3.git", branch = "main" }

[dependencies]
anyhow = "1.0.72"
arc-swap = "1.7.1"
base-x = "0.2.11"
elsa = { version = "1.9.0", git = "https://github.com/lurk-lab/elsa", branch = "sync_frozen", features = ["indexmap"] }
expect-test = "1.4.1"
indexmap = { version = "2.2.6", features = ["rayon"] }
match_opt = "0.1.2"
nom = "7.1.3"
nom_locate = "4.1.0"
num-bigint = "0.4.3"
once_cell = "1.18.0"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
serde = "1.0"
serde_json = { version = "1.0" }
thiserror = "1.0.44"
rayon = { workspace = true }
itertools = { workspace = true }
p3-air = { workspace = true }
p3-baby-bear = { workspace = true }
p3-field = { workspace = true }
p3-matrix = { workspace = true }
p3-mds = { workspace = true }
p3-commit = { workspace = true }
p3-challenger = { workspace = true }
p3-maybe-rayon = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }
p3-util = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "fib"
harness = false

[workspace]
members = ["examples/calculator", "examples/byte_lookup"]

[profile.dev-ci]
inherits = "dev"
# By compiling dependencies with optimizations, performing tests gets much faster.
opt-level = 3
overflow-checks = true
lto = "thin"
incremental = false
codegen-units = 16
