[package]
name = "loam"
version = "0.1.0"
edition.workspace = true
repository.workspace = true

[[bin]]
name = "lurk"
path = "src/main.rs"

[workspace.package]
authors = ["Argument Engineering <engineering@argument.xyz>"]
edition = "2021"
repository = "https://github.com/argumentcomputer/loam"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
rayon = "1.10.0"
itertools = "0.13.0"
p3-air = { git = "https://github.com/argumentcomputer/Plonky3.git", branch = "sp1" }
p3-baby-bear = { git = "https://github.com/argumentcomputer/Plonky3.git", branch = "sp1" }
p3-field = { git = "https://github.com/argumentcomputer/Plonky3.git", branch = "sp1" }
p3-matrix = { git = "https://github.com/argumentcomputer/Plonky3.git", branch = "sp1" }
p3-mds = { git = "https://github.com/argumentcomputer/Plonky3.git", branch = "sp1" }
p3-commit = { git = "https://github.com/argumentcomputer/Plonky3.git", branch = "sp1" }
p3-challenger = { git = "https://github.com/argumentcomputer/Plonky3.git", branch = "sp1" }
p3-maybe-rayon = { git = "https://github.com/argumentcomputer/Plonky3.git", branch = "sp1" }
p3-poseidon2 = { git = "https://github.com/argumentcomputer/Plonky3.git", branch = "sp1" }
p3-symmetric = { git = "https://github.com/argumentcomputer/Plonky3.git", branch = "sp1" }
p3-uni-stark = { git = "https://github.com/argumentcomputer/Plonky3.git", branch = "sp1" }
p3-util = { git = "https://github.com/argumentcomputer/Plonky3.git", branch = "sp1" }
sphinx-core = { git = "https://github.com/argumentcomputer/sphinx.git", branch = "forward_ports_48"}
sphinx-derive = { git = "https://github.com/argumentcomputer/sphinx.git", branch = "forward_ports_48" }
anyhow = "1.0.72"
ascent = { git = "https://github.com/argumentcomputer/ascent.git" }
arc-swap = "1.7.1"
base-x = "0.2.11"
bincode = "1"
camino = "1.1"
clap = "4.5.15"
criterion = "0.5"
either = "1"
expect-test = "1.4.1"
home = "0.5"
indexmap = "2.2.6"
match_opt = "0.1.2"
nom = "7.1.3"
nom_locate = "4.1.0"
num-bigint = "0.4.3"
num-derive = "0.4"
num-traits = "0.2"
once_cell = "1.18.0"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
ratatui = "0.28.1"
rustc-hash = "2.0.0"
rustyline = "14.0"
rustyline-derive = "0.10"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10.8"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0.44"
hybrid-array = "0.2.0-rc"
lazy_static = "1.4.0"
hashbrown = "0.14.5"
rand_chacha = "0.3.1"
proptest = "1.5.0"

loam-macros = { version = "0.1.0", path = "loam-macros" }
derive-syn-parse = "0.2.0"
proc-macro2 = "1.0.66"
quote = "1.0.31"
syn = "2.0.57"

[dependencies]
anyhow = { workspace = true }
ascent = { workspace = true }
arc-swap = { workspace = true }
base-x = { workspace = true }
bincode = { workspace = true }
camino = { workspace = true }
clap = { workspace = true, features = ["derive"] }
expect-test = { workspace = true }
either = { workspace = true }
home = { workspace = true }
hybrid-array = { workspace = true }
indexmap = { workspace = true, features = ["rayon"] }
lazy_static = { workspace = true }
match_opt = { workspace = true }
nom = { workspace = true }
nom_locate = { workspace = true }
num-bigint = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rand_xoshiro = { workspace = true }
ratatui = { workspace = true }
rustc-hash = { workspace = true }
rustyline = { workspace = true, features = ["derive"] }
rustyline-derive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
strum = { workspace = true }
itertools = { workspace = true }
p3-air = { workspace = true }
p3-baby-bear = { workspace = true }
p3-field = { workspace = true }
p3-matrix = { workspace = true }
p3-mds = { workspace = true }
p3-commit = { workspace = true }
p3-challenger = { workspace = true }
p3-maybe-rayon = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }
p3-util = { workspace = true }
sphinx-core = { workspace = true }
sphinx-derive = { workspace = true }
hashbrown = { workspace = true }

loam-macros = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[build-dependencies]
vergen = { version = "8", features = ["build", "git", "gitcl"] }

[[bench]]
name = "fib"
harness = false

[[bench]]
name = "lcs"
harness = false

[[bench]]
name = "sum"
harness = false

[[bench]]
name = "lurk"
harness = false

[workspace]
members = ["loam-macros", "examples/byte_lookup"]

[profile.dev-ci]
inherits = "dev"
# By compiling dependencies with optimizations, performing tests gets much faster.
opt-level = 3
overflow-checks = true
lto = "thin"
incremental = false
codegen-units = 16

[features]
default=[]
loam=[]


# Ascent will be compiled with -Copt-level=3 . This includes build dependencies.
[profile.dev.package."ascent"]
opt-level = 3
