[package]
name = "loam-macros"
version = "0.1.0"
description = "Custom derives for `loam`"
edition.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.31"
syn = { version = "2.0.57", features = ["derive", "full", "extra-traits", "visit-mut"] }
derive-syn-parse = "0.2.0"
itertools = "0.12.0"
lazy_static = "1.4.0"

[dev-dependencies]
ascent = "0.6.0"