[package]
name = "loam-macros"
version = "0.1.0"
description = "Custom derives for `loam`"
edition.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["derive", "full", "extra-traits", "visit-mut"] }
derive-syn-parse = { workspace = true }
itertools = "0.13.0"
lazy_static = { workspace = true }

[dev-dependencies]
ascent = { workspace = true }
