[package]
name = "byte_lookup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lurk = { path = "../.." }
p3-air = { workspace = true }
p3-baby-bear = { workspace = true }
p3-field = { workspace = true }
p3-matrix = { workspace = true }
p3-maybe-rayon = { workspace = true }
sphinx-core = { workspace = true }
sphinx-derive = { workspace = true }
rand =  { workspace = true }
rand_chacha =  { workspace = true }
