[package]
name = "calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loam = { path = "../.." }
p3-air = { git = "https://github.com/lurk-lab/Plonky3.git", branch = "sp1" }
p3-baby-bear = { git = "https://github.com/lurk-lab/Plonky3.git", branch = "sp1" }
p3-field = { git = "https://github.com/lurk-lab/Plonky3.git", branch = "sp1" }
p3-matrix = { git = "https://github.com/lurk-lab/Plonky3.git", branch = "sp1" }
rayon = "1.10.0"
rustyline = "14.0"
wp1-core = { git = "ssh://git@github.com/wormhole-foundation/wp1.git", branch = "dev" }
